3.4
	+ Ask for trace object to non-handled EBox::Exceptions::Base
	  exceptions in the UnhandledError middleware. This will gives us
	  useful stack traces.
	+ When requesting from type a non-existing value use acquirer
	  if it is a volatile type
	+ EBox::WebAdmin::addNginxInclude does not longer raises exception
	  if file not yet exists
	+ Improve post save modules algorithm
	+ Added local apparmor profile for mysqld
	+ Avoid to show two 'module not enabled' messages in composites
	+ All non external exceptions from normal requests are now shown
	  in the UI with the stack trace to report as a bug
	+ All non external exceptions from AJAX requests are now shown in
	  the UI with the stack trace to report as a bug
	+ Template exceptions in normal requests are now handled in webadmin
	+ Set templated files encoding to UTF-8
	+ Send Perl warnings to Zentyal log file in webadmin app
	+ Added keepFile parameter to EBox::Downloader::CGI::FromTempDir
	+ Remove idle and dead code from EBox::Module::Service::writeConfFile
	+ Added auditable property to EBox::Model::DataTable
	+ Added HAProxyPreSetConf to HaProxy::ServiceBase
	+ Moved management of webadmin certificate to HAProxy module
	+ Enable ReverseProxy middleware always
	+ MySQL is restarted before creating database
	+ Use root ownership for webadmin certificates
	+ Execute change hostname actions only if the hostname has really changed
	+ Don't expire session on finish software wizard page
	+ Fixed show help JS to avoid to have help elements with different
	  show state
	+ Use window.location.replace instead of window.location.href
	  to redirect using JS
	+ In EBox::Type::Select, use element value as printableValue for
	  unknown options or options without printableValue
	+ Save haproxy config as changed after webadmin's initialSetup
	+ Send restartUI flag to restart service when restarting a module
	  from the UI
	+ Fix calculation of page number when using go to last page control