@@ -1,4 +1,4 @@
-# Copyright (C) 2008-2013 Zentyal S.L.
+# Copyright (C) 2008-2014 Zentyal S.L.
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License, version 2, as
@@ -199,15 +199,17 @@ sub _connect
 #
 sub _disconnect
 {
-    my ($self) = @_;
+    my ($self, $skipException) = @_;
 
     $self->{'sthinsert'}->finish() if ($self->{'sthinsert'});
     if ($self->{'dbh'}) {
         $self->{'dbh'}->disconnect();
         $self->{'dbh'} = undef;
     } else {
-        throw EBox::Exceptions::Internal(
-            'There wasn\'t a database connection, check if database exists\n');
+        unless ($skipException) {
+            throw EBox::Exceptions::Internal(
+                'There wasn\'t a database connection, check if database exists\n');
+        }
     }
 }
 
@@ -849,7 +851,7 @@ sub _superuserTmpFile
 sub DESTROY
 {
     my ($self) = @_;
-    $self->_disconnect() if (defined($self));
+    $self->_disconnect(1) if (defined($self));
 }
 
 1;
